src/css/Article.css
article {
  padding: 1rem 2rem;
  z-index: 10;
}

/* article img:hover {
  box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
  border: 2px solid rgba(255, 255, 255, 0.7);
} */

article img {
  max-width: 500px;
  margin: 1rem 0;
  cursor: pointer;
  filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.1));
  /* border: 2px solid transparent; */
}

.article-div {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 2rem;
}

article > img:first-child {
  margin-top: 0.5rem !important;
}

article {
  animation: article-fade-in 1s;
}

.article-header {
  opacity: 0;
  animation: article-fade-in 1.5s 0.3s forwards;
}

@keyframes article-fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.article-text {
  animation: article-text 1s 0.5s forwards;
  opacity: 0;
}

@keyframes article-text {
  from {
    opacity: 0;
    transform: scale(0.85);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@media screen and (max-width: 900px) {
  article img {
    padding: 1rem 0 !important;
    width: fit-content !important;
    float: none !important;
    margin: 0 auto !important;
  }
}
@media screen and (max-width: 700px) {
  article img {
    width: 100% !important;
    max-height: none !important;
  }
}
@media screen and (max-width: 500px) {
  article {
    padding: 1rem !important;
  }
}

.photo-title {
  animation: fade-in 2s forwards 1s;
}

.dark article a {
  color: var(--accent-2);
}
article a {
  color: var(--accent-4);
}
article a:hover {
  text-decoration: underline;
}

.grad-rad {
  position: absolute;
  border-radius: 99999px;
  width: 35rem;
  height: 35rem;
  opacity: 0.5;
}
.grad-rad-l {
  top: -24rem;
  left: -20rem;
  background-image: radial-gradient(
    circle at center,
    white 0%,
    transparent 70%
  );
  animation: grad-l-anim 1.5s 0.3s forwards;
}
.grad-rad-r {
  bottom: -24rem;
  right: -20rem;
  background-image: radial-gradient(
    circle at center,
    white 0%,
    transparent 70%
  );
  animation: grad-r-anim 1.5s 0.3s forwards;
}
@keyframes grad-l-anim {
  from {
    opacity: 1;
    scale: 10;
  }
  to {
    opacity: none;
    scale: 1;
  }
}
@keyframes grad-r-anim {
  from {
    opacity: 1;
    scale: 10;
  }
  to {
    opacity: none;
    scale: 1;
  }
}
.dark .grad-rad-l {
  background-image: radial-gradient(
    circle at center,
    var(--accent) 0%,
    transparent 70%
  );
}

.dark .grad-rad-r {
  background-image: radial-gradient(
    circle at center,
    var(--accent) 0%,
    transparent 70%
  );
}

article ul {
  margin-left: 1.5rem;
  list-style: disc;
}

article h5 {
  border: none;
  font-size: 1.1rem;
}

